--- a/site.html
+++ b/site.html
@@ -7,18 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>  <!--aqui vai ser o meu cabeçalhp-->
-<h1>Relatório das redes sociais
+    <header>  <!--aqui vai ser o meu cabeçalho-->
+<h1>Relatório das redes sociais</h1>
 <nav>
   <a href="site.html">mundo</a>
-   <a href="#">minha escola</a>
+  <a href="#">minha escola</a>
 </nav>
-</h1>
     </header> 
 <main class="graficos-section">  <!--Parte principal,serão sobre os gráficos aqui-->
   <section id="graficos-container" class="graficos-container">
 
-  </section>
+    </section>
  </main> 
 <footer> <!--rodapé-->
 <p>Desenvolvido por aluna Isabele</p>
