--- a/site.html
+++ b/site.html
@@ -22,5 +22,6 @@
 <footer> <!--rodapé-->
 <p>Desenvolvido por aluna Isabele</p>
 </footer>
+<script type="module" src="informacoesGlobais.js"></script>
 </body>
 </html>
